install font in ci

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/configure-pages@v3
+      - name: Install fonts
+        run: apt install fonts-noto-cjk
       - name: Install Typst
         run: |
           wget https://github.com/typst/typst/releases/download/v0.7.0/typst-x86_64-unknown-linux-musl.tar.xz
