--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/configure-pages@v3
       - name: Install fonts
-        run: apt install fonts-noto-cjk
+        run: sudo apt install fonts-noto-cjk
       - name: Install Typst
         run: |
           wget https://github.com/typst/typst/releases/download/v0.7.0/typst-x86_64-unknown-linux-musl.tar.xz
